--- a/trunk/xOrdineServizio/DEccezione.resx
+++ b/trunk/xOrdineServizio/DEccezione.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Label1.Text" xml:space="preserve">
-    <value>Si è verificato l'errore indicato di seguito. Verrà inviata una segnalazione al programmatore. Riprovare ad eseguire nuovamente l'operazione. Se il problema persiste contattare l'autore del programma descrivendo nel dettaglio l'errore rilevato e le modalità con cui si è verificato.</value>
+    <value>Si è verificato l'errore indicato di seguito. Verrà inviata una segnalazione al programmatore. Provare ad eseguire nuovamente l'operazione. Se il problema persiste contattare l'autore del programma descrivendo nel dettaglio l'errore rilevato e le modalità con cui si è verificato.</value>
   </data>
   <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
